--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-	
+	<link rel="icon" type="image/png" href="img/colts.png" />
+
 	<title>The Colts Locker</title>
 
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
