--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/styles.css">
+	<script src="https://assets.gfycat.com/gfycat.js"></script>
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/articles.js"></script>
 	<script src="js/scripts.js"></script>
@@ -21,6 +22,7 @@
 	</div>
 	<div class="main">
 		<div class="articles container shadow"></div>
+
 	</div>
 	<div class="footer"></div>
 </body>
