removed a new line character at the start of articles.js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<div class="header-text container">The Colts Locker</div>
 	</div>
 	<div class="main">
+		<div class="back-button shadow"></div>
 		<div class="articles container shadow"></div>
-
 	</div>
 	<div class="footer"></div>
 </body>
